<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/msn_description" 
        android:textSize="18sp"
        android:textColor="@color/green"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/green" />

    <EditText
        android:id="@+id/edit_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/write_msg"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
        android:lines="4" />

    <EditText
        android:id="@+id/edit_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/author"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />

    <Button
        android:id="@+id/publish_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish" 
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/green" />

    <ListView
        android:id="@+id/msg_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ListView>
    
    <TextView 
        android:id="@+id/tv_notree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="16sp"
        android:text="@string/no_tree"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>
    

</LinearLayout>