<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.testar.MainActivity" 
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold" 
            android:padding="20dp"
            android:textColor="@color/green"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/map_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_map"/>

        <Button
            android:id="@+id/ar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_ar" />
    </LinearLayout>

</ScrollView>